--- a/app/src/main/res/layout/sura_recycler_view.xml
+++ b/app/src/main/res/layout/sura_recycler_view.xml
@@ -6,6 +6,7 @@
 
 
     <TextView
+        android:id="@+id/suraContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
